--- a/CSS/header.css
+++ b/CSS/header.css
@@ -16,7 +16,7 @@ body {
 .navbar--main--container {
   border: 1px solid red;
   height: 100px;
-  width: 90%;
+  width: 200px;
   margin: 0 auto;
   display: flex;
   align-items: center;
