--- a/CSS/section-content.css
+++ b/CSS/section-content.css
@@ -1,6 +1,6 @@
 .main--content {
   width: 100%;
-  height: 700px;
+  height: 1000px;
   border: 1px solid red;
   background-image: url(/IMG/sun.jpg);
   background-position: center;
@@ -8,12 +8,67 @@
 
 .bg--white--line {
   width: 100%;
-  height: 200px;
+  height: 800px;
   background-color: white;
   position: absolute;
   top: 604px;
+  z-index: 0;
 }
 
 .content--name {
   text-align: center;
+}
+
+.content--first-container--imgs {
+  border: 1px solid blue;
+  width: 90%;
+  height: 200px;
+  margin: 0 auto;
+  position: relative;
+  z-index: 1;
+  top: 435px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.img {
+  width: 100px;
+  height: 100px;
+  border: 1px solid green;
+  border-radius: 50%;
+}
+
+.img-1 {
+  background-image: url(/IMG/amber-heard.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.img-2 {
+  background-image: url(/IMG/billie-eilish.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.img-3 {
+  background-image: url(/IMG/scarlett-johansson.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.content--second-name--golden {
+  color: var(--golden);
+  text-align: center;
+  position: relative;
+  top: 425px;
+  z-index: 1;
+}
+
+.content--paragraph {
+  text-align: center;
+  position: relative;
+  top: 413px;
+  z-index: 1;
+  padding: 10px;
 }
