--- a/CSS/section-content.css
+++ b/CSS/section-content.css
@@ -1,14 +1,15 @@
 .main--content {
   width: 100%;
-  height: 1000px;
+  height: 1542px;
   border: 1px solid red;
   background-image: url(/IMG/sun.jpg);
   background-position: center;
+  background-repeat: no-repeat;
 }
 
 .bg--white--line {
   width: 100%;
-  height: 800px;
+  height: 1035px;
   background-color: white;
   position: absolute;
   top: 604px;
@@ -17,6 +18,7 @@
 
 .content--name {
   text-align: center;
+  margin-top: 210px;
 }
 
 .content--first-container--imgs {
@@ -26,7 +28,7 @@
   margin: 0 auto;
   position: relative;
   z-index: 1;
-  top: 435px;
+  top: 243px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -61,14 +63,59 @@
   color: var(--golden);
   text-align: center;
   position: relative;
-  top: 425px;
+  top: 227px;
   z-index: 1;
 }
 
 .content--paragraph {
   text-align: center;
   position: relative;
-  top: 413px;
+  top: 205px;
   z-index: 1;
   padding: 10px;
+}
+
+.content--second-container--grid {
+  position: relative;
+  z-index: 1;
+  margin: 0 auto;
+  border: 1px solid blue;
+  width: 70%;
+  height: 600px;
+  top: 192px;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+
+.img-amber {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  justify-self: center;
+}
+
+.img-billie {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  justify-self: center;
+}
+
+.second-container--name--golden {
+  color: var(--golden);
+  text-align: center;
+  margin: 0%;
+}
+
+.second-container--about {
+  text-align: center;
+}
+
+.second-container--link {
+  margin: 0%;
+}
+
+.links {
+  text-decoration: none;
+  color: black;
 }
