--- a/CSS/header.css
+++ b/CSS/header.css
@@ -35,14 +35,8 @@ body {
   margin-bottom: 10px;
 }
 
-.search--icon--svg {
-  height: 15px;
-  width: 15px;
-  position: absolute;
-  top: 71px;
-  left: 118px;
-}
-
 .search--input {
-  padding-left: 20px;
+  padding-left: 25px;
+  background-image: url(/IMG/search.svg);
+  background-repeat: no-repeat;
 }
