--- a/CSS/section-content.css
+++ b/CSS/section-content.css
@@ -1,7 +1,6 @@
 .main--content {
   width: 100%;
   height: 1542px;
-  border: 1px solid red;
   background-image: url(/IMG/sun.jpg);
   background-position: center;
   background-repeat: no-repeat;
@@ -18,11 +17,11 @@
 
 .content--name {
   text-align: center;
-  margin-top: 210px;
+  padding-top: 210px;
+  margin: 0;
 }
 
 .content--first-container--imgs {
-  border: 1px solid blue;
   width: 90%;
   height: 200px;
   margin: 0 auto;
@@ -37,7 +36,6 @@
 .img {
   width: 100px;
   height: 100px;
-  border: 1px solid green;
   border-radius: 50%;
 }
 
@@ -72,7 +70,6 @@
   position: relative;
   top: 205px;
   z-index: 1;
-  border: 1px solid cyan;
   width: 90%;
   margin: 0 auto;
 }
@@ -81,7 +78,6 @@
   position: relative;
   z-index: 1;
   margin: 0 auto;
-  border: 1px solid blue;
   width: 70%;
   height: 600px;
   top: 210px;
