--- a/CSS/section-content.css
+++ b/CSS/section-content.css
@@ -8,16 +8,16 @@
 
 .bg--white--line {
   width: 100%;
-  height: 1042px;
+  height: 870px;
   background-color: white;
   position: absolute;
-  top: 604px;
+  top: 780px;
   z-index: 0;
 }
 
 .content--name {
   text-align: center;
-  padding-top: 210px;
+  padding-top: 295px;
   margin: 0;
 }
 
@@ -27,15 +27,15 @@
   margin: 0 auto;
   position: relative;
   z-index: 1;
-  top: 243px;
+  top: 320px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .img {
-  width: 100px;
-  height: 100px;
+  width: 130px;
+  height: 130px;
   border-radius: 50%;
 }
 
@@ -61,14 +61,14 @@
   color: var(--golden);
   text-align: center;
   position: relative;
-  top: 227px;
+  top: 285px;
   z-index: 1;
 }
 
 .content--paragraph {
   text-align: center;
   position: relative;
-  top: 205px;
+  top: 275px;
   z-index: 1;
   width: 90%;
   margin: 0 auto;
@@ -80,23 +80,25 @@
   margin: 0 auto;
   width: 70%;
   height: 600px;
-  top: 210px;
+  top: 265px;
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 60px 1fr 1fr;
 }
 
 .img-amber {
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
   justify-self: center;
+  align-self: center;
 }
 
 .img-billie {
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
   justify-self: center;
+  align-self: center;
 }
 
 .second-container--name--golden {
@@ -113,7 +115,7 @@
   margin: 0%;
 }
 
-.links {
+.second-container--link a {
   text-decoration: none;
   color: black;
 }
